# CSCI-576-Multimedia-System-Design

./: .gitignore  README.md  ShowImg.java
ContentBrowser/: CMakeLists.txt  synopsis.metafile
ContentBrowser/src/: App.java  BrowserController.java  Constants.java  Display.java  DisplayView.java  ExploreSynopsis.java  FrameItem.java  ImageItem.java  ImageReader.java  Item.java  MetaData.java  Model.java  Parser.java  PlaySound.java  PlayWaveException.java  PlayWaveFile.java  VideoParser.java  VideoPlayer.java
CreateSynopsis/src/: Constants.java  CreateSynopsis.java  ImageReader.java  ShowImg.java  TestCmd.java
ImageGenerator/src/: Main.java  Shot.java  ShowImg.java
hecate/: CMakeLists.txt
hecate-master/: CMakeLists.txt
hecate-master/.build_release/src/hecate/: gflseg.d  hecate_highlight.d  hecate_highlight.o.warnings.txt  hecate_main.d  hecate_main.o.warnings.txt  hecate_thumbnail.d  hecate_thumbnail.o.warnings.txt  video_parser.d
hecate-master/.build_release/src/tools/: hecate  hecate.d  hecate.o.warnings.txt
hecate-master/distribute/include/hecate/: hecate.hpp  image_metrics.hpp  video_parser.hpp
hecate-master/include/hecate/: Image.h  gapstat.hpp  hecate.hpp  image_metrics.hpp  item.h  resource.h  video_parser.hpp
hecate-master/src/hecate/: Image.cpp  hecate_main.cpp  hecate_thumbnail.cpp  item.cpp  video_parser.cpp
hecate-master/src/tools/: hecate.cpp
hecate/src/tools/: hecate.cpp
